kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  ports:
  - name: http-backend
    port: 6878
  selector:
    app: backend
