kubernetes/broker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scc-broker
  labels:
    app: scc-broker
spec:
  ports:
  - port: 8888
    targetPort: 8888
    name: http-broker
  selector:
    app: scc-broker
