kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: fronted
spec:
  ports:
  - name: http-frontend
    port: 8080
  selector:
    app: frontend
