kubernetes/state-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scc-state
  labels:
    app: scc-state
spec:
  ports:
  - port: 7777
    targetPort: 7777
    name: http-state
  selector:
    app: scc-state
